# cf-rust

./: Cargo.toml  pnpm-lock.yaml
.wrangler/tmp/bundle-Lk7eVa/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-pF9jq8/: 098a25e2a6a391796c8215e3811e6bc14718e0ea-index.wasm  shim.js  shim.js.map
src/: hello.rs  lib.rs  msg.rs  on.rs
src/routes/: sms.rs
src/types/: base_result.rs  mod.rs
