[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
anyhow = "1.0.86"
serde = "1.0.203"
regex = "1.10.5"


[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
